--- a/ios/SharePlaces/Info.plist
+++ b/ios/SharePlaces/Info.plist
@@ -47,6 +47,8 @@
 		<dict>
 			<key>localhost</key>
 			<dict>
+				<key>NSLocationAlwaysUsageDescription</key>
+				<true/>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
 				<true/>
 			</dict>
