--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "test": "jest"
   },
   "dependencies": {
+    "@mapbox/react-native-mapbox-gl": "^6.1.1",
     "react": "16.3.1",
-    "react-native": "0.55.2"
+    "react-native": "0.55.2",
+    "react-native-maps": "^0.21.0",
+    "react-native-open-maps": "^0.1.4"
   },
   "devDependencies": {
     "babel-jest": "22.4.3",
